[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
dynamic = ["version"]

name = "hell_rcon_core"
description = "<Hell Let Loose> RCON API Core"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "青丘白泽", email = "pradyun@example.com"}
]
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  "rich"
]

[project.urls]
Homepage = "https://github.com/simon7073/hell_rcon_core/"
Source = "https://github.com/simon7073/hell_rcon_core"


[tool.hatch.version]
path = "src/hell_rcon_core/__about__.py"
